fix sponsor card height on mobile

--- a/style.css
+++ b/style.css
@@ -1197,6 +1197,7 @@
     .sponsor-info-card {
         margin-right: 5%;
         margin-left: 5%;
+        height: 500px;
     }
 
     .auto-progress {
